--- a/src/locales/ne.json
+++ b/src/locales/ne.json
@@ -1,7 +1,7 @@
 {
   "landing": {
     "orgName": "प्रवासी नेपाली संघ भारत",
-    "systemName": "प्रमाण प्रणाली",
+    "systemName": "प्रमाणपत्र",
     "tagline": "विश्वव्यापी नेपाली समुदायको लागि डिजिटल परिचय",
     "description": "प्रवासी नेपाली संघ भारत भारतभरि नेपाली प्रवासीहरूलाई सेवा गर्न समर्पित छ। हाम्रो प्रमाण प्रणालीले हाम्रो समुदायलाई जोड्न र सशक्त बनाउन सुरक्षित, प्रमाणित डिजिटल सदस्यता कार्डहरू प्रदान गर्दछ।",
     "mission": "सम्पदा संरक्षण, पुल निर्माण, जीवन सशक्तिकरण।",
